06/19/2003 Bob Rossi <bob_rossi@cox.com>

	* NEWS: Updating NEWS file with new features for cgdb-0.3.2 release

06/19/2003 Bob Rossi <bob_rossi@cox.com>

	* README: Added dependency information

06/19/2003 Bob Rossi <bob_rossi@cox.com>

	* README: Added tabstop,syntax and escdelay commands

04/28/2003 Bob Rossi <bob_rossi@cox.net>

    * Changed version number to 0.3.1-cvs for cvs development

version 0.3.1 (04/28/2003):

04/28/2003 Bob Rossi <bob_rossi@cox.net>

    * removed '--with-drivers' from configure: All drivers are automatically
    built, but they are not installed. They end up in $(top_srcdir)/progs.

04/27/2003 Bob Rossi <bob_rossi@cox.net>

    * Changed configure to only build cgdb by default: the drivers can only be
    built when the user runs configure with --with-drivers
    * Moved the error check for readline with the readline check in config

version 0.3.0 (04/11/2003):