@@ -78,6 +78,9 @@ Quick Reference
                        (especially useful as an init setting in cgdbrc)
                        values={top_full, top_big, even, bottom_big, bottom_full}
                        (:set ws)
+    :set winminheight -> The minimal height of a window. Windows will never 
+                       become smaller than this value.
+                       (:set wmh)
     :set tabstop    -> Number of spaces that a <Tab> in the file counts for.
     :set syntax     -> Sets the current highlighting mode of the current file.
                        values={c,ada,off}
