@@ -1,3 +1,7 @@
+06/25/2003 Bob Rossi <bob_rossi@cox.com>
+   
+   * README: Added winminheight doc
+
 06/19/2003 Bob Rossi <bob_rossi@cox.com>
 
 	* NEWS: Updating NEWS file with new features for cgdb-0.3.2 release
